Finalizado entre SOAP/REST
